WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51166
ExecutableAllocator::cacheFlush should call sys_cache_control
https://bugs.webkit.org/show_bug.cgi?id=51166
Summary
ExecutableAllocator::cacheFlush should call sys_cache_control
Pratik Solanki
Reported
2010-12-15 22:55:24 PST
cacheFlush() currently calls sys_icache_invalidate() and sys_dcache_flush. Instead we should just call sys_cache_control(kCacheFunctionPrepareForExecution,..).
Attachments
Patch
(1.38 KB, patch)
2010-12-15 23:06 PST
,
Pratik Solanki
ggaren
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2010-12-15 22:55:57 PST
<
rdar://problem/8737284
>
Pratik Solanki
Comment 2
2010-12-15 23:06:39 PST
Created
attachment 76737
[details]
Patch
Geoffrey Garen
Comment 3
2010-12-16 10:13:32 PST
Comment on
attachment 76737
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2010-12-16 10:15:08 PST
Comment on
attachment 76737
[details]
Patch Rejecting
attachment 76737
[details]
from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'apply-attachment', '--non-interactive', 76737]" exit_code: 2 Last 500 characters of output: ailed to merge in the changes. Patch failed at 0001 2010-12-16 Yury Semikhatsky <
yurys@chromium.org
> When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at WebKitTools/Scripts/update-webkit line 132. Failed to run "['WebKitTools/Scripts/update-webkit']" exit_code: 2 Full output:
http://queues.webkit.org/results/7094077
WebKit Commit Bot
Comment 5
2010-12-16 12:28:22 PST
Comment on
attachment 76737
[details]
Patch Rejecting
attachment 76737
[details]
from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'apply-attachment', '--non-interactive', 76737]" exit_code: 2 Last 500 characters of output: ailed to merge in the changes. Patch failed at 0001 2010-12-16 Yury Semikhatsky <
yurys@chromium.org
> When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at WebKitTools/Scripts/update-webkit line 132. Failed to run "['WebKitTools/Scripts/update-webkit']" exit_code: 2 Full output:
http://queues.webkit.org/results/7135083
Geoffrey Garen
Comment 6
2010-12-16 13:36:56 PST
Committed revision 74210.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug