https://bugs.webkit.org/show_bug.cgi?id=51166 ExecutableAllocator::cacheFlush should call sys_cache_control

Patch by Pratik Solanki <psolanki@apple.com> on 2010-12-16
Reviewed by Geoffrey Garen.

* jit/ExecutableAllocator.h:
(JSC::ExecutableAllocator::cacheFlush): Use the more correct and forward looking API -
sys_cache_control(kCacheFunctionPrepareForExecution,...).



Canonical link: https://commits.webkit.org/64557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74210 268f45cc-cd09-0410-ab3c-d52691b4dbfc